# MoR-LLM-Mixture-of-Recursions-Small-Large-Language-Model

./: .gitignore  Analyze the research paper at [https___arxiv.org_h.md  README.md  inference.py  pyproject.toml  requirements.txt  train.py  train_gpu.py
configs/: large_llm.yaml  medium_llm.yaml  small_model.yaml
docs/: DATASET_GUIDE.md  LLM_SCALING_GUIDE.md
examples/: quick_start.py  tiny_model.yaml
inference/: __init__.py  inference_engine.py
mor_model/: __init__.py  config.py  kv_cache.py  mor_transformer.py  recursive_layers.py  routing.py
tests/: test_mor_model.py
training/: __init__.py  data_utils.py  trainer.py  utils.py
